k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medilink
  labels:
    name: medilink
    environment: development
